# active-adaptation

./: .gitignore  README.md  configs.py  helpers.py  orbit.py  play.py  play_orbit.py  pyproject.toml  remove_packages.txt  run.sh  setup.py  test.ipynb  test_env.py  test_new.py  test_orbit.py  train.py  train_orbit.py
active_adaptation/: __init__.py  asset.py  cli.py  helpers.py  registry.py  viewer.py
active_adaptation/assets/: __init__.py  abp.py  asset_cfg.py  cassie.py  cassie.usd  cyberdog2_v2.usd  cyberdog2_v3.usd  go2arm.usd  gripper.usd  humanoid.py  quadruped.py  quadruped_manipulator.py  registry.py  scene.py  sirius.py  spawn.py
active_adaptation/assets_mjcf/: __init__.py  plane.xml
active_adaptation/envs/: __init__.py  adapters.py  base.py  biped.py  dribble.py  env_base.py  humanoid.py  init_states.pt  isaac_lab.py  locomotion.py  manipulation.py  mdp.py  mujoco.py  position.py  quadruped.py  recover.py  robot.py  scene.py  simple_env.py  terrain.py  tracking.py  utils.py  velocity.py  velocity_v0.py  velocity_v1.py  velocity_v2.py  velocity_v3.py
active_adaptation/learning/: __init__.py  bc.py  hbc.py  sac.py
active_adaptation/project_loading/: cli.py  discovery.py  manifest.py  plugin.py  runtime.py
active_adaptation/sensors/: mjlab.py
active_adaptation/utils/: command_history.py  debug.py  export.py  gamepad.py  helpers.py  math.py  motion.py  orbit.py  profiling.py  symmetry.py  torchrl.py  wandb.py  warp.py
bash/: dump_gs_imgs.sh  play.sh  play_g1.sh  play_g1_da3.sh  play_g1_flat.sh  play_g1_vel.sh  train.sh  train_debug_rgb.sh  train_g1.sh  train_g1_blind.sh  train_g1_da3.sh  train_g1_depth.sh  train_g1_flat.sh  train_g1_vel.sh  train_rgb.sh
cfg/: eval.yaml  imitate.yaml  play.yaml  play_lab.yaml  rollout.yaml  train.yaml  train_hier.yaml  train_lab.yaml  train_two_teacher.yaml
cfg/base/: env_base.yaml
cfg/exp/: debug.yaml  (+4 more)
configs/: __init__.py  recover.py  rough.py  terrain.py
go2deploy/: CMakeLists.txt  play.py
projects/: __init__.py
scripts/: .gitignore  4038-+jacobians-2024-07-14-08-22-19.yaml  4041-+params-2024-07-14-09-03-43-policy.pth  4045-+velocity-2024-07-14-18-23-35.yaml  4058-+both-2024-07-14-11-44-55.yaml  4091-OrcaStairs-ppo_adapt-2024-07-17-10-23-13.yaml  4092-OrcaStairs-ppo_adapt-2024-07-17-10-23-32.yaml  4098-+arm_swing-2024-07-17-12-08-21.yaml  4102-angvel_xy-2024-07-17-13-26-25.yaml  4103-OrcaStairs-ppo_adapt-2024-07-17-13-52-23.yaml  4112-+arm_swing-2024-07-18-09-08.yaml  checkpoint_server.py  debug_da3_vis.py  deploy_instinctlab_gs.py  deploy_instinctlab_onnx.py  eval.py  eval_run.py  helpers.py  imitate.py  launch_ddp.sh  launch_multi_node.sh  launch_multi_node_g1.sh  launch_multi_node_g1_blind.sh  launch_multi_node_g1_da3.sh  launch_multi_node_g1_flat.sh  launch_multi_node_g1_vel.sh  launch_multi_node_rgb.sh  orbit.py  play.py  play_lab.py  play_mujoco.py  play_orbit.py  rollout.py  run_gs_deploy.sh  run_gs_deploy_stair.sh  run_gs_deploy_stair_gsrender.sh  scene.py  test_env.py  test_ik.py  test_new.py  (+10 more)
sim2sim/: aliengo.py  aliengo_flat.py  alienm-force.py  go2.py  go2_forcefield.py  go2async.py  liveplot.py  orca.py  orca_sim2sim.py  policy-07-05_11-51.pt  policy-go2force-1011.pt  policy-go2force-841.pt  policy-go2force-861.pt  robot.py  utils.py
(+360 files in other folders)
